# rpgems-backend

./: .codacy.yml  .gitignore  .pylintrc  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: coverage-report.yml  linter.yml
app/: __init__.py  main.py
app/adapters/: __init__.py
app/adapters/repositories/: __init__.py  base_repository.py  database.py  exceptions.py
app/api/: __init__.py  app_router.py
app/api/adapter/: __init__.py  character.py  character_attribute.py  character_class.py
app/api/domain/: __init__.py  character.py  character_attribute.py  character_class.py
app/api/routes/: __init__.py  app_health.py  app_router.py  character.py  character_attribute.py  character_class.py
app/api/schema/: __init__.py  app_health.py  character.py  character_attribute.py  character_class.py
app/character/: __init__.py  app_router.py  db.py
app/core/: __init__.py  settings.py
app/crud/: character.py  character_attribute.py  character_class.py
app/domain/: __init__.py  character.py  character_attribute.py  character_class.py
app/exceptions/: character.py  character_attribute.py  character_class.py
app/models/: character.py  character_attribute.py  character_class.py
app/repository/: __init__.py
app/services/: __init__.py  character.py  character_attribute.py  character_class.py
db/migrations/: env.py
docker/: .env  .env-test  Dockerfile  docker-compose.yaml  init-db.sh
docs/: character_definition.md  components_definition.md  game_definition.md  intro.md  session_definition.md  stack_definition.md  story_definition.md
tests/: __init__.py
tests/integration/: conftest.py
tests/unit/: __init__.py  conftest.py
(+38 files in other folders)
