[tool.poetry]
name = "rpgems"
version = "0.1.0"
description = "A system to create and play an RPG game"
authors = ["Marco Gomes", "Rafael Ribeiro", "Teles"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
